--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>en/</title>
-    <link rel="canonical" href="en/">
+    <title>/site2/en/</title>
+    <link rel="canonical" href="/site2/en/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=en/">
+    <meta http-equiv="refresh" content="0; url=/site2/en/">
   </head>
 </html>
